kubernetes/backend-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: quranindex-server
      tier: backend
      track: stable
  replicas: 2
  template:
    metadata:
      labels:
        app: quranindex-server
        tier: backend
        track: stable
    spec:
      containers:
        - name: app
          image: gcr.io/quranindex/server:v1.7
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "2048Mi"
              cpu: "500m"
            limits:
              memory: "2048Mi"
              cpu: "500m"
