kubernetes/backend-service-config.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend
spec:
    selector:
      app: quranindex-server
      tier: backend
    ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
    type: NodePort
