kubernetes/frontend-service-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: quranindex-client
    tier: frontend
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: NodePort
