kubernetes/ingress-config.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: quranindex-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: quranindex-ip
    networking.gke.io/managed-certificates: quranindex-cert
spec:
  backend:
    serviceName: frontend
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: backend
          servicePort: 80
